--- a/tex/grant/allbib.bib
+++ b/tex/grant/allbib.bib
@@ -1,4 +1,42 @@
+@online{cdc2021,
+  author       = {Centers for Disease Control and Prevention},
+  title        = {Seasonal Influenza},
+  year         = {2021},
+  url          = {https://www.cdc.gov/flu/about/index.html},
+  urldate      = {2022-05-05}
+}
 
+@online{dod2020,
+  author       = {U.S. Department of Defense},
+  title        = {Report on Effects of a Changing Climate to the Department of Defense},
+  year         = {2020},
+  url          = {https://media.defense.gov/2020/Jul/21/2002462222/-1/-1/1/Report_on_Effects_of_a_Changing_Climate_to_the_Department_of_Defense.PDF},
+  urldate      = {2022-05-05}
+}
+@article{wells2005,
+  author       = {Wells, Kenneth B. and Lewis, Meryl J.},
+  title        = {Influenza: Evolution, Detection, and Response},
+  journal      = {Clinical Microbiology Reviews},
+  volume       = {18},
+  number       = {1},
+  pages        = {80--103},
+  year         = {2005},
+  doi          = {10.1128/CMR.18.1.80-103.2005}
+}
+
+@article{chattopadhyay2022emergenet,
+  author = {Chattopadhyay, Ishanu and Wu, Kevin and Li, Jin and et al.},
+  title = {Emergenet: Fast Scalable Pandemic Risk Assessment of Influenza A Strains Circulating In Non-human Hosts},
+  year = {2022},
+  month = {12},
+  day = {23},
+  eprint = {2336091},
+  eprinttype = {rs},
+  version = {1},
+  archiveprefix = {Research Square},
+  primaryclass = {q-bio.PE},
+  url = {https://doi.org/10.21203/rs.3.rs-2336091/v1},
+}
 
 @article{matrosovich1997avian,
   title={Avian influenza A viruses differ from human viruses by recognition of sialyloligosaccharides and gangliosides and by a higher conservation of the HA receptor-binding site},
